force-app/main/default/objects/Account/fields/Allow_Others_To_Discuss_ThisClaim__c.field-meta.xml
<CustomField>
    <fullName>Allow_Others_To_Discuss_ThisClaim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you want to give the VCF permission t</label>
    <type>Checkbox</type>
</CustomField>