force-app/main/default/objects/Account/fields/Identification_Type__c.field-meta.xml
<CustomField>
    <fullName>Identification_Type__c</fullName>
    <label>Identification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Identification_Type</valueSetName>
    </valueSet>
</CustomField>