force-app/main/default/objects/Account/fields/Person_Type_Victim__c.field-meta.xml
<CustomField>
    <fullName>Person_Type_Victim__c</fullName>
    <label>Who are you registering for?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registering for a deceased victim</fullName>
                <default>true</default>
                <label>Registering for a deceased victim</label>
            </value>
            <value>
                <fullName>Registering for myself</fullName>
            </value>
            <value>
                <fullName>Registering for someone who is incapacitated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>