force-app/main/default/objects/Account/fields/PersonDeathdate__c.field-meta.xml
<CustomField>
    <fullName>PersonDeathdate__c</fullName>
    <description>Date the person passed away</description>
    <label>Deathdate</label>
    <type>Date</type>
</CustomField>