force-app/main/default/objects/Account/fields/Victim_Had_Former_Name__c.field-meta.xml
<CustomField>
    <fullName>Victim_Had_Former_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was the victim known by another name?</label>
    <type>Checkbox</type>
</CustomField>