force-app/main/default/objects/Account/fields/Victim_Location__c.field-meta.xml
<CustomField>
    <fullName>Victim_Location__c</fullName>
    <description>Select any location(s) where the victim went at least once between September 11, 2001, and May 30, 2002</description>
    <inlineHelpText>Select any location(s) where the victim went at least once between September 11, 2001, and May 30, 2002</inlineHelpText>
    <label>Location(s) where you were present:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Victim_Location</valueSetName>
    </valueSet>
</CustomField>