force-app/main/default/objects/Account/fields/Victim_RelatedPerson_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Victim_RelatedPerson_Relationship__c</fullName>
    <label>Relationship to the Victim</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rlationship</valueSetName>
    </valueSet>
</CustomField>